# slynk

./: .gitignore  README.md  package.json
scripts/: setup-sidecars.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sync.rs
src/routes/: +page.svelte
